@@ -1,59 +1,41 @@
 package info.nightscout.androidaps.plugins.pump.medtronic.comm.history.pump;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import org.joda.time.LocalDateTime;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import android.util.Log;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Locale;
 
+import info.nightscout.androidaps.logging.L;
 import info.nightscout.androidaps.plugins.pump.common.utils.ByteUtil;
+import info.nightscout.androidaps.plugins.pump.common.utils.DateTimeUtil;
 import info.nightscout.androidaps.plugins.pump.common.utils.HexDump;
-import info.nightscout.androidaps.plugins.pump.common.utils.StringUtil;
 import info.nightscout.androidaps.plugins.pump.medtronic.comm.history.MedtronicHistoryDecoder;
-import info.nightscout.androidaps.plugins.pump.medtronic.comm.history.MedtronicHistoryEntry;
 import info.nightscout.androidaps.plugins.pump.medtronic.comm.history.RecordDecodeStatus;
+import info.nightscout.androidaps.plugins.pump.medtronic.data.dto.BasalProfile;
 import info.nightscout.androidaps.plugins.pump.medtronic.data.dto.BolusDTO;
 import info.nightscout.androidaps.plugins.pump.medtronic.data.dto.BolusWizardDTO;
+import info.nightscout.androidaps.plugins.pump.medtronic.data.dto.DailyTotalsDTO;
 import info.nightscout.androidaps.plugins.pump.medtronic.data.dto.TempBasalPair;
 import info.nightscout.androidaps.plugins.pump.medtronic.defs.MedtronicDeviceType;
 import info.nightscout.androidaps.plugins.pump.medtronic.defs.PumpBolusType;
 import info.nightscout.androidaps.plugins.pump.medtronic.util.MedtronicUtil;
 
 /**
- * Application: GGC - GNU Gluco Control
- * Plug-in: GGC PlugIn Base (base class for all plugins)
+ * This file was taken from GGC - GNU Gluco Control and modified/extended for AAPS.
  * <p>
- * See AUTHORS for copyright information.
- * <p>
- * This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public
- * License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later
- * version.
- * <p>
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
- * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
- * <p>
- * You should have received a copy of the GNU General Public License along with this program; if not, write to the Free
- * Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
- * <p>
- * Filename: MedtronicPumpHistoryDecoder Description: Decoder for history data.
- * <p>
- * Author: Andy {andy@atech-software.com}
+ * Author: Andy {andy.rozman@gmail.com}
  */
 
-public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
+public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder<PumpHistoryEntry> {
 
-    private static final Logger LOG = LoggerFactory.getLogger(MedtronicPumpHistoryDecoder.class);
-    private static final String TAG = "MdtPump";
+    private static final Logger LOG = LoggerFactory.getLogger(L.PUMPCOMM);
 
     // PumpValuesWriter pumpValuesWriter = null;
 
     // DataAccessPlugInBase dataAccess = DataAccessPump.getInstance();
-    Map<String, BolusDTO> bolusHistory = new HashMap<>();
+    // Map<String, BolusDTO> bolusHistory = new HashMap<>();
     // Temporary records for processing
     private PumpHistoryEntry tbrPreviousRecord;
     private PumpHistoryEntry changeTimeRecord;
@@ -64,12 +46,7 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
     }
 
 
-    // public List<? extends MedtronicHistoryEntry> processPageAndCreateRecords(RawHistoryPage page) {
-    // List<Byte> dataClear = checkPage(page);
-    // return createRecords(dataClear);
-    // }
-
-    protected <E extends MedtronicHistoryEntry> List<E> createRecords(List<Byte> dataClear, Class<E> clazz) {
+    public List<PumpHistoryEntry> createRecords(List<Byte> dataClear) {
         prepareStatistics();
 
         int counter = 0;
@@ -77,13 +54,13 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
         boolean incompletePacket = false;
         deviceType = MedtronicUtil.getMedtronicPumpModel();
 
-        List<E> outList = new ArrayList<E>();
+        List<PumpHistoryEntry> outList = new ArrayList<PumpHistoryEntry>();
         String skipped = null;
         int elementStart = 0;
 
         if (dataClear.size() == 0) {
-            Log.e(TAG, "Empty page.");
-            // return;
+            LOG.error("Empty page.");
+            return outList;
         }
 
         do {
@@ -100,7 +77,7 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
                 continue;
             } else {
                 if (skipped != null) {
-                    Log.v(TAG, " ... Skipped " + skipped);
+                    LOG.debug(" ... Skipped " + skipped);
                     skipped = null;
                 }
             }
@@ -118,17 +95,17 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
             }
 
             List<Byte> listRawData = new ArrayList<Byte>();
-            listRawData.add((byte)opCode);
+            listRawData.add((byte) opCode);
 
             if (entryType == PumpHistoryEntryType.UnabsorbedInsulin) {
                 int elements = dataClear.get(counter);
-                listRawData.add((byte)elements);
+                listRawData.add((byte) elements);
                 counter++;
 
                 int els = getUnsignedInt(elements);
 
                 for (int k = 0; k < (els - 2); k++) {
-                    listRawData.add((byte)dataClear.get(counter));
+                    listRawData.add((byte) dataClear.get(counter));
                     counter++;
                 }
 
@@ -141,8 +118,8 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
                         listRawData.add(dataClear.get(counter));
                         counter++;
                     } catch (Exception ex) {
-                        Log.e(TAG, "OpCode: " + HexDump.getCorrectHexValue((byte)opCode) + ", Invalid package: "
-                            + HexDump.toHexStringDisplayable(listRawData));
+                        LOG.error("OpCode: " + HexDump.getCorrectHexValue((byte) opCode) + ", Invalid package: "
+                                + HexDump.toHexStringDisplayable(listRawData));
                         // throw ex;
                         incompletePacket = true;
                         break;
@@ -182,37 +159,15 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
 
                 RecordDecodeStatus decoded = decodeRecord(pe);
 
-                // if (pe.getEntryType() ==
-                // PumpHistoryEntryType.UnknownBasePacket)
-                // {
-                // decoded = RecordDecodeStatus.Unknown;
-                // }
-                // else
-                // {
-                // decoded = decodeRecord(pe);
-                // }
-
-                // System.out.println("Found entry: " + entryType.name() +
-                // " ["
-                // + bitUtils.getDebugByteListHex(listRawData) + "] ");
-
-                // FIXME
-
-                // if (!decoded)
-                // System.out.println("#" + record + " " + pe);
-
-                // if (decoded)
-                // LOG.info("#" + record + " " + pe);
-                // else
-                // LOG.warn("#" + record + " BAD: " + pe);
-
-                if ((decoded == RecordDecodeStatus.OK) || (decoded == RecordDecodeStatus.Ignored)) {
-                    LOG.info("#" + record + " " + decoded.getDescription() + " " + pe);
-                    Log.i(TAG, "#" + record + " " + decoded.getDescription() + " -- " + pe);
-                } else {
+                if (decoded == RecordDecodeStatus.WIP) {
                     LOG.warn("#" + record + " " + decoded.getDescription() + "  " + pe);
-                    Log.w(TAG, "#" + record + " " + decoded.getDescription() + " -- " + pe);
                 }
+
+                // if ((decoded == RecordDecodeStatus.OK) || (decoded == RecordDecodeStatus.Ignored)) {
+                // LOG.info("#" + record + " " + decoded.getDescription() + " " + pe);
+                // } else {
+                // LOG.warn("#" + record + " " + decoded.getDescription() + "  " + pe);
+                // }
 
                 addToStatistics(pe, decoded, null);
 
@@ -220,14 +175,9 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
 
                 if (decoded == RecordDecodeStatus.OK) // we add only OK records, all others are ignored
                 {
-                    outList.add((E)pe);
+                    outList.add(pe);
                 }
             }
-
-            // System.out.println("Counter: " + counter);
-
-            // if (counter > 100)
-            // break;
 
         } while (counter < dataClear.size());
 
@@ -235,112 +185,58 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
     }
 
 
-    public RecordDecodeStatus decodeRecord(MedtronicHistoryEntry entryIn) {
-        PumpHistoryEntry precord = (PumpHistoryEntry)entryIn;
+    public RecordDecodeStatus decodeRecord(PumpHistoryEntry record) {
         try {
-            return decodeRecord(entryIn, false);
+            return decodeRecord(record, false);
         } catch (Exception ex) {
-            LOG.error("     Error decoding: type={}, ex={}", precord.getEntryType().name(), ex.getMessage(), ex);
+            LOG.error("     Error decoding: type={}, ex={}", record.getEntryType().name(), ex.getMessage(), ex);
             return RecordDecodeStatus.Error;
         }
     }
 
 
-    public <E extends MedtronicHistoryEntry> List<E> getTypedList(List<? extends MedtronicHistoryEntry> list,
-            Class<E> clazz) {
-
-        List<E> listOut = new ArrayList<>();
-
-        for (MedtronicHistoryEntry medtronicHistoryEntry : list) {
-            listOut.add((E)medtronicHistoryEntry);
-        }
-
-        return listOut;
-    }
-
-
-    public RecordDecodeStatus decodeRecord(MedtronicHistoryEntry entryIn, boolean x) {
-        // FIXME
-        // TODO
-        PumpHistoryEntry entry = (PumpHistoryEntry)entryIn;
+    public RecordDecodeStatus decodeRecord(PumpHistoryEntry entry, boolean x) {
 
         if (entry.getDateTimeLength() > 0) {
             decodeDateTime(entry);
         }
 
-        // LOG.debug("decodeRecord: type={}", entry.getEntryType());
-        decodeDateTime(entry);
-
         switch (entry.getEntryType()) {
-        // not implemented
-            case ChangeBasalProfile_NewProfile:
-            case ChangeBasalProfile_OldProfile:
-            case SelectBasalProfile:
-            case DailyTotals522:
 
-                // case IanA8:
-            case DailyTotals523:
-            case DailyTotals512:
-                return RecordDecodeStatus.NotSupported;
+            case ChangeBasalPattern:
+                return RecordDecodeStatus.OK; // Not supported at the moment
 
-                // WORK IN PROGRESS
-
-                // POSSIBLY READY
-
-            case BasalProfileStart:
-                return decodeBasalProfileStart(entry);
-
-                // AAPS Implementation - Not yet done
-
-                // AAPS Implementation - OK entries
-
-                // AAPS events (Tbr, Bolus)
-
-                // AAPS alerts
-
-                // AAPS TDDs
-
-                // AAPS Implementation - Ignored entries
+            // AAPS Implementation - Ignored entries
             case CalBGForPH:
             case ChangeRemoteId:
             case ClearAlarm:
             case ChangeAlarmNotifyMode: // ChangeUtility:
             case ToggleRemote:
-            case UnabsorbedInsulin:
             case BGReceived: // Ian3F: CGMS
             case SensorAlert: // Ian08 CGMS
-            case ChangeTempBasalType:
             case ChangeTimeFormat:
             case ChangeReservoirWarningTime:
             case ChangeBolusReminderEnable:
             case ChangeBolusReminderTime:
             case ChangeChildBlockEnable:
-            case ChangeMaxBolus:
-            case ChangeMaxBasal:
             case BolusWizardEnabled:
             case ChangeBGReminderOffset:
             case ChangeAlarmClockTime:
             case ChangeMeterId:
-            case ChangeParadigmLinkID:
+            case ChangeParadigmID:
             case JournalEntryMealMarker:
             case JournalEntryExerciseMarker:
             case DeleteBolusReminderTime:
             case SetAutoOff:
             case SelfTest:
-            case ClearSettings:
             case JournalEntryInsulinMarker:
             case JournalEntryOtherMarker:
             case ChangeBolusWizardSetup:
             case ChangeSensorSetup2:
-            case RestoreMystery51:
-            case RestoreMystery52:
             case ChangeSensorAlarmSilenceConfig:
-            case RestoreMystery54:
-            case RestoreMystery55:
             case ChangeSensorRateOfChangeAlertSetup:
             case ChangeBolusScrollStepSize:
             case BolusWizardChange:
-            case SaveSettings:
             case ChangeVariableBolus:
             case ChangeAudioBolus:
             case ChangeBGReminderEnable:
@@ -350,9 +246,19 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
             case ChangeCarbUnits:
             case ChangeWatchdogEnable:
             case ChangeOtherDeviceID:
-            case ChangeWatchdogMarriageProfile:
-            case DeleteOtherDeviceID:
+            case ReadOtherDevicesIDs:
+            case BolusWizardEstimate512:
+            case BGReceived512:
+            case SensorStatus:
+            case ReadCaptureEventEnabled:
             case ChangeCaptureEventEnable:
+            case ReadOtherDevicesStatus:
+                return RecordDecodeStatus.OK;
+
+            case Sensor54:
+            case Sensor55:
+            case Sensor51:
+            case Sensor52:
             case EventUnknown_MM522_0x45:
             case EventUnknown_MM522_0x46:
             case EventUnknown_MM522_0x47:
@@ -363,21 +269,36 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
             case EventUnknown_MM522_0x4c:
             case EventUnknown_MM512_0x10:
             case EventUnknown_MM512_0x2e:
-            case EventUnknown_MM512_0x2f:
             case EventUnknown_MM512_0x37:
             case EventUnknown_MM512_0x38:
-            case EventUnknown_MM512_0x39:
-            case EventUnknown_MM512_0x3b:
             case EventUnknown_MM512_0x4e:
             case EventUnknown_MM522_0x70:
             case EventUnknown_MM512_0x88:
             case EventUnknown_MM512_0x94:
             case EventUnknown_MM522_0xE8:
             case EventUnknown_0x4d:
-                // LOG.debug(" -- ignored Pump Entry: " + entry.getEntryType().name());
+            case EventUnknown_MM522_0x25:
+            case EventUnknown_MM522_0x05:
+                LOG.debug(" -- ignored Unknown Pump Entry: " + entry);
                 return RecordDecodeStatus.Ignored;
 
-                // **** Implemented records ****
+            case UnabsorbedInsulin:
+		        return RecordDecodeStatus.Ignored;
+
+            // **** Implemented records ****
+
+            case DailyTotals522:
+            case DailyTotals523:
+            case DailyTotals515:
+            case EndResultTotals:
+                return decodeDailyTotals(entry);
+
+            case ChangeBasalProfile_OldProfile:
+            case ChangeBasalProfile_NewProfile:
+                return decodeBasalProfile(entry);
+
+            case BasalProfileStart:
+                return decodeBasalProfileStart(entry);
 
             case ChangeTime:
                 changeTimeRecord = entry;
@@ -388,22 +309,18 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
                 return RecordDecodeStatus.OK;
 
             case TempBasalDuration:
-                decodeTempBasal(entry);
+                // decodeTempBasal(entry);
                 return RecordDecodeStatus.OK;
 
             case TempBasalRate:
-                decodeTempBasal(entry);
+                // decodeTempBasal(entry);
                 return RecordDecodeStatus.OK;
 
             case Bolus:
                 decodeBolus(entry);
                 return RecordDecodeStatus.OK;
 
-            case EndResultTotals:
-                decodeEndResultTotals(entry);
-                return RecordDecodeStatus.OK;
-
-            case BatteryActivity:
+            case BatteryChange:
                 decodeBatteryActivity(entry);
                 return RecordDecodeStatus.OK;
 
@@ -412,28 +329,18 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
                 return RecordDecodeStatus.OK;
 
             case LowBattery:
-                // this.writeData(PumpBaseType.Event, PumpEventType.BatteryLow, entry.getATechDate());
-                return RecordDecodeStatus.OK;
-
             case PumpSuspend:
-                // this.writeData(PumpBaseType.Event, PumpEventType.BasalStop, entry.getATechDate());
-                return RecordDecodeStatus.OK;
-
             case PumpResume:
-                // this.writeData(PumpBaseType.Event, PumpEventType.BasalRun, entry.getATechDate());
-                return RecordDecodeStatus.OK;
-
             case Rewind:
-                // this.writeData(PumpBaseType.Event, PumpEventType.CartridgeRewind, entry.getATechDate());
-                return RecordDecodeStatus.OK;
-
-            case EventUnknown_MM522_0x05:
-                break;
             case NoDeliveryAlarm:
-                // this.writeData(PumpBaseType.Alarm, PumpAlarms.NoDelivery, entry.getATechDate());
+            case ChangeTempBasalType:
+            case ChangeMaxBolus:
+            case ChangeMaxBasal:
+            case ClearSettings:
+            case SaveSettings:
                 return RecordDecodeStatus.OK;
 
-            case BolusWizardBolusEstimate:
+            case BolusWizardEstimate:
                 decodeBolusWizard(entry);
                 return RecordDecodeStatus.OK;
 
@@ -441,15 +348,13 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
                 decodePrime(entry);
                 return RecordDecodeStatus.OK;
 
+            case TempBasalCombined:
+                return RecordDecodeStatus.Ignored;
+
             case None:
             case UnknownBasePacket:
                 return RecordDecodeStatus.Error;
 
-                // case Andy0d:
-
-                // case Andy58:
-
-                // case Andy90:
 
             default: {
                 LOG.debug("Not supported: " + entry.getEntryType());
@@ -458,58 +363,66 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
 
         }
 
-        return RecordDecodeStatus.Error;
+        // return RecordDecodeStatus.Error;
 
     }
 
 
-    // private void decodeCalBGForPH(PumpHistoryEntry entry) {
-    // int high = (entry.getDatetime()[4] & 0x80) >> 7;
-    // int bg = bitUtils.toInt(high, getUnsignedInt(entry.getHead()[0]));
-    //
-    // writeData(PumpBaseType.AdditionalData, PumpAdditionalDataType.BloodGlucose, "" + bg, entry.getATechDate());
-    // }
+    private RecordDecodeStatus decodeDailyTotals(PumpHistoryEntry entry) {
 
-    // masks = [ ( 0x80, 7), (0x40, 6), (0x20, 5), (0x10, 4) ]
-    // nibbles = [ ]
-    // for mask, shift in masks:
-    // nibbles.append( ( (year & mask) >> shift ) )
-    // return nibbles
+        entry.addDecodedData("Raw Data", ByteUtil.getHex(entry.getRawData()));
 
-    // FIXME
+        //LOG.debug("{} - {}", entry.getEntryType().name(), ByteUtil.getHex(entry.getRawData()));
+        //LOG.debug("{}", entry);
+
+        DailyTotalsDTO totals = new DailyTotalsDTO(entry);
+
+        entry.addDecodedData("Object", totals);
+
+        return RecordDecodeStatus.OK;
+    }
+
+
+    private RecordDecodeStatus decodeBasalProfile(PumpHistoryEntry entry) {
+
+        // LOG.debug("decodeBasalProfile: {}", entry);
+
+        BasalProfile basalProfile = new BasalProfile();
+        basalProfile.setRawDataFromHistory(entry.getBody());
+
+        // LOG.debug("decodeBasalProfile BasalProfile: {}", basalProfile);
+
+        entry.addDecodedData("Object", basalProfile);
+
+        // FIXME displayable ??
+
+        return RecordDecodeStatus.OK;
+    }
+
+
     private void decodeChangeTime(PumpHistoryEntry entry) {
         if (changeTimeRecord == null)
             return;
 
-        // String timeChange = String.format(PumpEventType.DateTimeChanged.getValueTemplate(),
-        // this.changeTimeRecord.getATechDate().getDateTimeString(), entry.getATechDate().getDateTimeString());
-
-        // writeData(PumpBaseType.Event, PumpEventType.DateTimeChanged, timeChange, entry.getATechDate());
+        entry.setDisplayableValue(entry.getDateTimeString());
 
         this.changeTimeRecord = null;
     }
 
 
-    // FIXME
     private void decodeBatteryActivity(PumpHistoryEntry entry) {
         // this.writeData(PumpBaseType.Event, entry.getHead()[0] == 0 ? PumpEventType.BatteryRemoved :
         // PumpEventType.BatteryReplaced, entry.getATechDate());
+
+        entry.setDisplayableValue(entry.getHead()[0] == 0 ? "Battery Removed" : "Battery Replaced");
     }
 
 
-    // FIXME 554 ?
-    private void decodeEndResultTotals(PumpHistoryEntry entry) {
-        float totals = bitUtils.toInt((int)entry.getHead()[0], (int)entry.getHead()[1], (int)entry.getHead()[2],
-            (int)entry.getHead()[3], ByteUtil.BitConversion.BIG_ENDIAN) * 0.025f;
-
-        entry.addDecodedData("Totals", totals);
-
-        // this.writeData(PumpBaseType.Report, PumpReport.InsulinTotalDay, getFormattedFloat(totals, 2),
-        // entry.getATechDate());
+    public static String getFormattedValue(float value, int decimals) {
+        return String.format(Locale.ENGLISH, "%." + decimals + "f", value);
     }
 
 
-    // FIXME
     private RecordDecodeStatus decodeBasalProfileStart(PumpHistoryEntry entry) {
         byte[] body = entry.getBody();
         // int bodyOffset = headerSize + timestampSize;
@@ -518,21 +431,21 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
         int index = body[2];
 
         if (MedtronicDeviceType.isSameDevice(MedtronicUtil.getMedtronicPumpModel(),
-            MedtronicDeviceType.Medtronic_523andHigher)) {
+                MedtronicDeviceType.Medtronic_523andHigher)) {
             rate = body[1] * 0.025f;
         }
 
         if (rate == null) {
             LOG.warn("Basal Profile Start (ERROR): offset={}, rate={}, index={}, body_raw={}", offset, rate, index,
-                body);
+                    body);
             return RecordDecodeStatus.Error;
         } else {
             // writeData(PumpBaseType.Basal, PumpBasalType.ValueChange, getFormattedFloat(rate, 3),
             // entry.getATechDate());
             entry.addDecodedData("Value", getFormattedFloat(rate, 3));
+            entry.setDisplayableValue(getFormattedFloat(rate, 3));
             return RecordDecodeStatus.OK;
         }
-
     }
 
 
@@ -544,7 +457,7 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
         float bolus_strokes = 10.0f;
 
         if (MedtronicDeviceType.isSameDevice(MedtronicUtil.getMedtronicPumpModel(),
-            MedtronicDeviceType.Medtronic_523andHigher)) {
+                MedtronicDeviceType.Medtronic_523andHigher)) {
             // https://github.com/ps2/minimed_rf/blob/master/lib/minimed_rf/log_entries/bolus_wizard.rb#L102
             bolus_strokes = 40.0f;
 
@@ -555,19 +468,19 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
             // carb_ratio (?) = (((self.body[2] & 0x07) << 8) + self.body[3]) /
             // 10.0s
             dto.insulinSensitivity = new Float(body[4]);
-            dto.bgTargetLow = (int)body[5];
-            dto.bgTargetHigh = (int)body[14];
+            dto.bgTargetLow = (int) body[5];
+            dto.bgTargetHigh = (int) body[14];
             dto.correctionEstimate = (((body[9] & 0x38) << 5) + body[6]) / bolus_strokes;
             dto.foodEstimate = ((body[7] << 8) + body[8]) / bolus_strokes;
             dto.unabsorbedInsulin = ((body[10] << 8) + body[11]) / bolus_strokes;
             dto.bolusTotal = ((body[12] << 8) + body[13]) / bolus_strokes;
         } else {
             dto.bloodGlucose = (((body[1] & 0x0F) << 8) | entry.getHead()[0]);
-            dto.carbs = (int)body[0];
-            dto.carbRatio = new Float(body[2]);
+            dto.carbs = (int) body[0];
+            dto.carbRatio = Float.valueOf(body[2]);
             dto.insulinSensitivity = new Float(body[3]);
-            dto.bgTargetLow = (int)body[4];
-            dto.bgTargetHigh = (int)body[12];
+            dto.bgTargetLow = (int) body[4];
+            dto.bgTargetHigh = (int) body[12];
             dto.bolusTotal = body[11] / 10.0f;
             dto.foodEstimate = body[6] / 10.0f;
             dto.unabsorbedInsulin = body[9] / 10.0f;
@@ -575,20 +488,18 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
             dto.correctionEstimate = (body[7] + (body[5] & 0x0F)) / 10.0f;
         }
 
-        dto.localDateTime = entry.getLocalDateTime();
+        dto.atechDateTime = entry.atechDateTime;
         entry.addDecodedData("Object", dto);
-        // entry.setHistoryEntryDetails(dto);
+        entry.setDisplayableValue(dto.getDisplayableValue());
 
         // this.writeData(PumpBaseType.Event, PumpEventType.BolusWizard, dto.getValue(), entry.getATechDate());
-
     }
 
 
-    // FIXME
     private void decodeLowReservoir(PumpHistoryEntry entry) {
-        float amount = (getUnsignedInt(entry.getHead()[0]) * 1.0f / 10.0f);
-        // this.writeData(PumpBaseType.Event, PumpEventType.ReservoirLowDesc, getFormattedFloat(amount, 1),
-        // entry.getATechDate());
+        float amount = (getUnsignedInt(entry.getHead()[0]) * 1.0f / 10.0f) * 2;
+
+        entry.setDisplayableValue(getFormattedValue(amount, 1));
     }
 
 
@@ -599,6 +510,9 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
 
         entry.addDecodedData("Amount", amount);
         entry.addDecodedData("FixedAmount", fixed);
+
+        entry.setDisplayableValue("Amount=" + getFormattedValue(amount, 2) + ", Fixed Amount="
+                + getFormattedValue(fixed, 2));
 
         // amount = (double) (asUINT8(data[4]) << 2) / 40.0;
         // programmedAmount = (double) (asUINT8(data[2]) << 2) / 40.0;
@@ -630,38 +544,39 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
         byte[] data = entry.getHead();
 
         if (MedtronicDeviceType.isSameDevice(MedtronicUtil.getMedtronicPumpModel(),
-            MedtronicDeviceType.Medtronic_523andHigher)) {
-            bolus.setRequestedAmount(bitUtils.toInt(data[0], data[1]) / 40.0f);
-            bolus.setDeliveredAmount(bitUtils.toInt(data[2], data[3]) / 10.0f);
-            bolus.setInsulinOnBoard(bitUtils.toInt(data[4], data[5]) / 40.0f);
+                MedtronicDeviceType.Medtronic_523andHigher)) {
+            bolus.setRequestedAmount(ByteUtil.toInt(data[0], data[1]) / 40.0d);
+            bolus.setDeliveredAmount(ByteUtil.toInt(data[2], data[3]) / 40.0d);
+            bolus.setInsulinOnBoard(ByteUtil.toInt(data[4], data[5]) / 40.0d);
             bolus.setDuration(data[6] * 30);
         } else {
-            bolus.setRequestedAmount(data[0] / 40.0f);
-            bolus.setDeliveredAmount(data[1] / 10.0f);
-            bolus.setDuration(data[2] * 30);
+            bolus.setRequestedAmount(ByteUtil.asUINT8(data[0]) / 10.0d);
+            bolus.setDeliveredAmount(ByteUtil.asUINT8(data[1]) / 10.0d);
+            bolus.setDuration(ByteUtil.asUINT8(data[2]) * 30);
         }
 
         bolus.setBolusType((bolus.getDuration() != null && (bolus.getDuration() > 0)) ? PumpBolusType.Extended
-            : PumpBolusType.Normal);
-        bolus.setLocalDateTime(entry.getLocalDateTime());
+                : PumpBolusType.Normal);
+        bolus.setAtechDateTime(entry.atechDateTime);
 
-        String dateTime = StringUtil.toDateTimeString(entry.getLocalDateTime());
+        // String dateTime = entry.DT;
 
-        if (bolus.getBolusType() == PumpBolusType.Extended) {
-            // we check if we have coresponding normal entry
-            if (bolusHistory.containsKey(dateTime)) {
-                BolusDTO bolusDTO = bolusHistory.get(dateTime);
-
-                bolusDTO.setImmediateAmount(bolus.getDeliveredAmount());
-                bolusDTO.setBolusType(PumpBolusType.Multiwave);
-
-                return;
-            }
-        }
+        // if (bolus.getBolusType() == PumpBolusType.Extended) {
+        // // we check if we have coresponding normal entry
+        // if (bolusHistory.containsKey(dateTime)) {
+        // BolusDTO bolusDTO = bolusHistory.get(dateTime);
+        //
+        // bolusDTO.setImmediateAmount(bolus.getDeliveredAmount());
+        // bolusDTO.setBolusType(PumpBolusType.Multiwave);
+        //
+        // return;
+        // }
+        // }
 
         entry.addDecodedData("Object", bolus);
+        entry.setDisplayableValue(bolus.getDisplayableValue());
 
-        bolusHistory.put(dateTime, bolus);
+        // bolusHistory.put(dateTime, bolus);
 
     }
 
@@ -674,6 +589,14 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
             this.tbrPreviousRecord = entry;
             return;
         }
+
+        decodeTempBasal(this.tbrPreviousRecord, entry);
+
+        tbrPreviousRecord = null;
+    }
+
+
+    public static void decodeTempBasal(PumpHistoryEntry tbrPreviousRecord, PumpHistoryEntry entry) {
 
         PumpHistoryEntry tbrRate = null, tbrDuration = null;
 
@@ -689,28 +612,16 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
             tbrRate = tbrPreviousRecord;
         }
 
-        // LOG.debug("Rate: " + tbrRate.toString());
-        // LOG.debug("Durration: " + tbrDuration.toString());
-
-        // if ((asUINT8(data[7]) >> 3) == 0) {
-        // mIsPercent = false;
-        // tbrRate = (double) (asUINT8(tbrRate.getRawData().get(1)) / 40.0;
-        // } else {
-        // mIsPercent = true;
-        // basalRate = asUINT8(data[1]);
-        // }
-
-        // FIXME
         TempBasalPair tbr = new TempBasalPair(tbrRate.getHead()[0], tbrDuration.getHead()[0], (ByteUtil.asUINT8(tbrRate
-            .getDatetime()[4]) >> 3) == 0);
+                .getDatetime()[4]) >> 3) == 0);
 
         // System.out.println("TBR: amount=" + tbr.getInsulinRate() + ", duration=" + tbr.getDurationMinutes()
         // // + " min. Packed: " + tbr.getValue()
         // );
 
         entry.addDecodedData("Object", tbr);
+        entry.setDisplayableValue(tbr.getDescription());
 
-        tbrPreviousRecord = null;
     }
 
 
@@ -732,18 +643,22 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
 
             int dayOfMonth = dt[3] & 0x1F;
             int year = fix2DigitYear(dt[4] & 0x3F); // Assuming this is correct, need to verify. Otherwise this will be
-                                                    // a problem in 2016.
+            // a problem in 2016.
 
-            LocalDateTime atdate = new LocalDateTime(year, month, dayOfMonth, hour, minutes, seconds);
+            entry.setAtechDateTime(DateTimeUtil.toATechDate(year, month, dayOfMonth, hour, minutes, seconds));
 
-            entry.setLocalDateTime(atdate);
         } else if (entry.getDateTimeLength() == 2) {
             int low = ByteUtil.asUINT8(dt[0]) & 0x1F;
             int mhigh = (ByteUtil.asUINT8(dt[0]) & 0xE0) >> 4;
             int mlow = (ByteUtil.asUINT8(dt[1]) & 0x80) >> 7;
             int month = mhigh + mlow;
-            int dayOfMonth = low + 1;
+            // int dayOfMonth = low + 1;
+            int dayOfMonth = dt[0] & 0x1F;
             int year = 2000 + (ByteUtil.asUINT8(dt[1]) & 0x7F);
+
+            int hour = 0;
+            int minutes = 0;
+            int seconds = 0;
 
             // LocalDate rval = new LocalDate(year, month, dayOfMonth);
 
@@ -751,15 +666,35 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
             // int month = (((dt[0] & 0xE0) >> 4) + ((dt[1] & 0x80) >> 7));
             // int year = fix2DigitYear(dt[1] & 0x3F);
 
-            LocalDateTime atdate = new LocalDateTime(year, month, dayOfMonth, 0, 0);
+            LOG.debug("DT: {} {} {}", year, month, dayOfMonth);
 
-            entry.setLocalDateTime(atdate);
+            if (dayOfMonth == 32) {
+                // FIXME remove
+                LOG.debug("Entry: Day 32 {} = [{}] {}", entry.getEntryType().name(),
+                        ByteUtil.getHex(entry.getRawData()), entry);
+            }
+
+            if (isEndResults(entry.getEntryType())) {
+                hour = 23;
+                minutes = 59;
+                seconds = 59;
+            }
+
+            entry.setAtechDateTime(DateTimeUtil.toATechDate(year, month, dayOfMonth, hour, minutes, seconds));
+
         } else {
             LOG.warn("Unknown datetime format: " + entry.getDateTimeLength());
         }
-        // return new DateTime(year + 2000, month, dayOfMonth, hour, minutes,
-        // seconds);
 
+    }
+
+
+    private boolean isEndResults(PumpHistoryEntryType entryType) {
+
+        return (entryType == PumpHistoryEntryType.EndResultTotals ||
+                entryType == PumpHistoryEntryType.DailyTotals515 ||
+                entryType == PumpHistoryEntryType.DailyTotals522 ||
+                entryType == PumpHistoryEntryType.DailyTotals523);
     }
 
 
@@ -773,16 +708,7 @@ public class MedtronicPumpHistoryDecoder extends MedtronicHistoryDecoder {
         return year;
     }
 
-    // WRITE DATA
 
-    // private void writeData(PumpBaseType baseType, CodeEnumWithTranslation subType, ATechDate aTechDate) {
-    // this.pumpValuesWriter.writeObject(baseType.name() + "_" + subType.getName(), aTechDate);
-    // }
-    //
-    //
-    // private void writeData(PumpBaseType baseType, CodeEnumWithTranslation subType, String value, ATechDate aTechDate)
-    // {
-    // this.pumpValuesWriter.writeObject(baseType.name() + "_" + subType.getName(), aTechDate, value);
-    // }
+
 
 }
